# mapage

./: CHANGELOG .md  Cargo.toml  LICENSE-MIT  Mapage Commands.txt  Mapage Comuniication Types.txt  README.md  THE-OLD-README.md  builds.txt  cfg_queries.txt  graphql_bits_and_peices.txt  introspectionSchema.json  memrs.code-workspace  memrs.code-workspace-windows  queries etc.txt  schema.graphql
old/: macros.rs
old/V1/: Cargo.toml  Readme.md  memrs.code-workspace
old/V1/src/: all_types.rs  async_graphql_generic_type_info.rs  async_graphql_types.rs  async_graphql_value_containers.rs  binary_operations.rs  consts.rs  errors.rs  identifier.rs  immut_mut_value_storage_container.rs  immut_value_storage_container.rs  instance_info.rs  logic.rs  main.rs  memrs_type.rs  model.rs  mut_value_storage_container.rs  namespace_getters.rs  namespace_setters.rs  namespace_setters_mut.rs  non_generic_type_controller.rs  refcell_storage_container.rs  storage_container.rs  store_traits.rs  storeage.rs  stored_object.rs  ternary_operations.rs  type_instance.rs  uniary_operations.rs  value.rs
old/V1/src/actor_utils/: actor_message.rs  mod.rs  storage_actor_io.rs
old/V1/src/builds/: mod.rs
old/V1/src/builds/store_build/: mod.rs
old/V1/src/builds/store_build/act_rusty_crate/: mod.rs
old/V1/src/builds/store_build/act_rusty_crate/monolithic_build/: mod.rs
old/V1/src/builds/store_build/act_rusty_crate/task_actor_per_ns/: mod.rs  namespace.rs  store.rs
old/V1/src/builds/store_build/mutex/: mod.rs
old/V1/src/builds/store_build/mutex/mtx_ns_scc/: mod.rs  namespace.rs  store.rs
old/V1/src/stored_objects/: mod.rs  std_option.rs  std_string.rs  stored_bool.rs  stored_char.rs  stored_identifier.rs  stored_numeric.rs  stored_unit.rs  whatever.rs
old/V1/src/stored_objects/collections/: mod.rs  std_vec.rs
old/V1/src/stored_objects/old/: nothing.rs  optional.rs  required.rs  something.rs
src/: command.rs  command_error.rs  command_result.rs  common_model_body_macros.rs  common_model_macros.rs  communication_instance.rs  errors.rs  main.rs  message_instance.rs  model.rs  mutation_model_macros.rs  owned_frame.rs  query_model_macros.rs  simple_websocket_pipeline.rs  streamed_message.rs  tasks_and_actors.rs  websocket_reader_and_writer.rs  websocket_server.rs  websockets_server.rs
src/actors/: command.rs  command_executor_actor.rs  command_processor_actor.rs  communication_processor_actor.rs  egress_actor.rs  ingress_actor.rs  libsync_actor_io.rs  mod.rs  simple_websocket_actor.rs  web_socket_actor_messages.rs
src/actors/disabled/: message_processor_actor.rs
src/builds/: mod.rs
src/builds/levels/: mod.rs
src/builds/levels/namespace_and_sub_namespace/: bool_namespace.rs  char_namespace.rs  char_non_managed_namespace.rs  float_namespace.rs  int_namespace.rs  mod.rs  numeric_namespace.rs  selected_type_namespace.rs  store.rs  string_namespace.rs  uint_namespace.rs  whatever_namespace.rs
src/builds/levels/namespace_and_sub_namespace/collections/: bool_vec_namespace.rs  mod.rs  vec_bool_namespace.rs  vec_char_namespace.rs  vec_collection_fns.rs  vec_collection_macros.rs  vec_namespace.rs  vec_numeric_namespace.rs  vec_string_namespace.rs
src/builds/levels/namespace_and_sub_namespace/dashmap_crate/: dashmap_namespace.rs
src/builds/levels/namespace_and_sub_namespace/old/: bool_non_managed_namespace.rs  float_namespace.rs  store.rs  store_namespace_macros.rs
src/builds/levels/namespace_and_sub_namespace/scc_crate/: hashmap_namespace.rs
src/builds/levels/none/: store.rs
src/builds/levels/old/: hashmap_store_macros.rs  store.rs
src/builds/levels/value/: mod.rs  store.rs
src/builds/levels/value/mutex/: macros.rs  mod.rs  mutex_bool_value.rs  mutex_char_value.rs  mutex_numeric_value.rs  mutex_string_value.rs
src/command_execution/: bool_commands.rs  executor.rs  mod.rs  various_parameters.rs
src/old/: store.rs
src/old/builds/: misc.rs
src/old/builds/levels/: mod.rs
src/old/builds/levels/namespace_and_sub_namespace/: char_namespace.rs  mod.rs
src/old/macros/: mod.rs
src/old/resolver_objects/: bool_type.rs  char_type.rs  f64_type.rs  i128_type.rs  i16_type.rs  i32_type.rs  i64_type.rs  miscellaneous.rs  mod.rs  schema.rs  string_type.rs  u128_type.rs  u16_type.rs  u32_type.rs  u8_type.rs
src/old/resolver_objects/collections/: mod.rs
src/old/resolver_objects/old/: unit_value_type.rs
src/resolver_objects/: bool_type.rs  cfgs.rs  char_type.rs  f32_type.rs  f64_type.rs  i128_type.rs  i16_type.rs  i32_type.rs  i64_type.rs  i8_type.rs  isize_type.rs  miscellaneous.rs  mod.rs  resolver_object_macros.rs  schema.rs  selected_type_type.rs  string_type.rs  u128_type.rs  u16_type.rs  u32_type.rs  u64_type.rs  u8_type.rs  usize_type.rs  whatever_type.rs
src/resolver_objects/collections/vec/: mod.rs  vec_bool_type.rs  vec_char_type.rs  vec_f32_type.rs  vec_f64_type.rs  vec_i128_type.rs  vec_i16_type.rs  vec_i32_type.rs  vec_i64_type.rs  vec_i8_type.rs  vec_isize_type.rs  vec_string_type.rs  vec_u128_type.rs  vec_u16_type.rs  vec_u32_type.rs  vec_u64_type.rs  vec_u8_type.rs  vec_usize_type.rs  vec_whatever_type.rs
src/store/: mod.rs
src/store/namespace/: bool_actor.rs  bool_namespace.rs  bool_namespace_actor.rs  char_namespace.rs  mod.rs  numeric_namespace.rs  store.rs  string_namespace.rs  whatever_namespace.rs
src/store/namespace/collections/: mod.rs  vec_bool_namespace.rs  vec_collection_fns.rs  vec_collection_macros.rs  vec_numeric_namespace.rs
src/store/namespace/dashmap_crate/: dashmap_namespace.rs
src/store/namespace/possible/: bool_actor_namespace.rs
src/store/namespace/scc_crate/: hashmap_namespace.rs  mod.rs
src/store/store/: mod.rs
src/types/: async_graphql_values.rs  bool_functions.rs  bool_value.rs  char_value.rs  keys.rs  mod.rs  numeric_functons.rs  numeric_values.rs  ok_value.rs  ops.rs  scalar_type_functions.rs  sizes.rs  string_value.rs  supported_type.rs  type_instance.rs  unit_value.rs  vecs.rs  whatever.rs
src/types/json/: command.rs  conversion.rs  mod.rs
src/types/old/: has_value.rs
src/websocket_actors/: simple_websocket_actor.rs
(+17 files in other folders)
