[package]
name = "memrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.14"
async-graphql-poem = "4.0.14"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] } #tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "sync", "macros", "fs"] }
poem = "1.3.45"
corlib = { path="../corlib" }
act-rusty = { path="../act-rusty" }
scc = "0.11.1"
async-trait = "0.1.57"
serde = { version = "1.0.*", features = ["derive"] } #"1.0.144"

